Added Bike Sharing, ADD Health, and Playground posts and tab

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const metadata = {
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        My name is <span class="font-semibold"><i>Matthias</i></span> and I am a data scientist</span
+        My name is <span class="font-semibold"><i>Matthias</i></span> and I love working with data</span
       >
     </Fragment>
   </Hero>
